--- a/TestResults/index.html
+++ b/TestResults/index.html
@@ -49,7 +49,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">26-12-2024 23:27:54</span>
+                    <span class="badge badge-primary">29-12-2024 22:31:36</span>
                 </a>
             </li>
         </ul>
@@ -118,19 +118,19 @@
 						</div>
 						<div class="open-test">
 							<div class="test-detail"> 
-								<p class="name">OrangeHRMLogin Login functionality</p> 
-								<p class="duration text-sm">0h:2m:3s+593ms</p> 
-								<span class="datetime">23:27:54 PM</span>
+								<p class="name">OrangeHRMDashboard left nav validation</p> 
+								<p class="duration text-sm">0h:0m:24s+234ms</p> 
+								<span class="datetime">22:31:36 PM</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
 							<div class="detail-head">
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
-										<h5 class="test-status text-pass">OrangeHRMLogin Login functionality</h5>
-										<span class='badge badge-success'>26-12-2024 23:27:54</span>
-										<span class='badge badge-danger'>26-12-2024 23:29:58</span>
-										<span class='badge badge-default'>0h:2m:3s+593ms</span>
+										<h5 class="test-status text-pass">OrangeHRMDashboard left nav validation</h5>
+										<span class='badge badge-success'>29-12-2024 22:31:36</span>
+										<span class='badge badge-danger'>29-12-2024 22:32:01</span>
+										<span class='badge badge-default'>0h:0m:24s+234ms</span>
 									</div>
 																	</div>
 							</div>
@@ -139,7 +139,7 @@
 	<div class="card">
 		<div class="card-header" role="tab">
 			<div class="card-title pl-3">
-				<div class="node">Scenario: Verify Login for orange hrm website using invalid credentials</div>
+				<div class="node">Scenario: Verify Admin page</div>
 				<div class="status-avatar float-left pass-bg">
 					<i class="fa fa-check text-white"></i>
 				</div>
@@ -157,113 +157,31 @@
                                 <span class="alert-icon pass-bg">
                                     <i class="fa fa-check text-white"></i>
                                 </span>
-                                <span>When User enters "Admin" in the Username text box</span>
+                                <span>When User enters "Admin" in the "Username" text box</span>
                             </div>
                             <div class="d-flex align-items-center justify-content-start when" title="">
                                 <span class="alert-icon pass-bg">
                                     <i class="fa fa-check text-white"></i>
                                 </span>
-                                <span>When User enters "admin134" in the Password text box</span>
+                                <span>When User enters "admin123" in the "Password" text box</span>
                             </div>
                             <div class="d-flex align-items-center justify-content-start when" title="">
                                 <span class="alert-icon pass-bg">
                                     <i class="fa fa-check text-white"></i>
                                 </span>
-                                <span>When User clicks on the Login button</span>
+                                <span>When User clicks on the "Login" button</span>
                             </div>
                             <div class="d-flex align-items-center justify-content-start then" title="">
                                 <span class="alert-icon pass-bg">
                                     <i class="fa fa-check text-white"></i>
                                 </span>
-                                <span>Then User is on login page and error message is displayed</span>
-                            </div>
-                    </div>
-				</div>
-	</div>
-	<div class="card">
-		<div class="card-header" role="tab">
-			<div class="card-title pl-3">
-				<div class="node">Scenario: Verify Login for orange hrm website using invalid credentials</div>
-				<div class="status-avatar float-left pass-bg">
-					<i class="fa fa-check text-white"></i>
-				</div>
-			</div>
-		</div>
-				<div class="collapse">
-                    <div class="card-body">
-                                                    <div class="d-flex align-items-center justify-content-start given" title="">
-                                <span class="alert-icon pass-bg">
-                                    <i class="fa fa-check text-white"></i>
-                                </span>
-                                <span>Given User is on login page</span>
-                            </div>
-                            <div class="d-flex align-items-center justify-content-start when" title="">
-                                <span class="alert-icon pass-bg">
-                                    <i class="fa fa-check text-white"></i>
-                                </span>
-                                <span>When User enters "User" in the Username text box</span>
-                            </div>
-                            <div class="d-flex align-items-center justify-content-start when" title="">
-                                <span class="alert-icon pass-bg">
-                                    <i class="fa fa-check text-white"></i>
-                                </span>
-                                <span>When User enters "User2133" in the Password text box</span>
-                            </div>
-                            <div class="d-flex align-items-center justify-content-start when" title="">
-                                <span class="alert-icon pass-bg">
-                                    <i class="fa fa-check text-white"></i>
-                                </span>
-                                <span>When User clicks on the Login button</span>
+                                <span>Then User is navigated to "Dashboard" page</span>
                             </div>
                             <div class="d-flex align-items-center justify-content-start then" title="">
                                 <span class="alert-icon pass-bg">
                                     <i class="fa fa-check text-white"></i>
                                 </span>
-                                <span>Then User is on login page and error message is displayed</span>
-                            </div>
-                    </div>
-				</div>
-	</div>
-	<div class="card">
-		<div class="card-header" role="tab">
-			<div class="card-title pl-3">
-				<div class="node">Scenario: Verify Login for orange hrm website using valid credentials</div>
-				<div class="status-avatar float-left pass-bg">
-					<i class="fa fa-check text-white"></i>
-				</div>
-			</div>
-		</div>
-				<div class="collapse">
-                    <div class="card-body">
-                                                    <div class="d-flex align-items-center justify-content-start given" title="">
-                                <span class="alert-icon pass-bg">
-                                    <i class="fa fa-check text-white"></i>
-                                </span>
-                                <span>Given User is on login page</span>
-                            </div>
-                            <div class="d-flex align-items-center justify-content-start when" title="">
-                                <span class="alert-icon pass-bg">
-                                    <i class="fa fa-check text-white"></i>
-                                </span>
-                                <span>When User enters "Admin" in the Username text box</span>
-                            </div>
-                            <div class="d-flex align-items-center justify-content-start when" title="">
-                                <span class="alert-icon pass-bg">
-                                    <i class="fa fa-check text-white"></i>
-                                </span>
-                                <span>When User enters "admin123" in the Password text box</span>
-                            </div>
-                            <div class="d-flex align-items-center justify-content-start when" title="">
-                                <span class="alert-icon pass-bg">
-                                    <i class="fa fa-check text-white"></i>
-                                </span>
-                                <span>When User clicks on the Login button</span>
-                            </div>
-                            <div class="d-flex align-items-center justify-content-start then" title="">
-                                <span class="alert-icon pass-bg">
-                                    <i class="fa fa-check text-white"></i>
-                                </span>
-                                <span>Then User is navigated to home page</span>
+                                <span>Then User sees "leftnavdashboard" tab highlighted</span>
                             </div>
                     </div>
 				</div>
@@ -324,7 +242,7 @@
 	                </div>
 	            </div>
 	            <div class="card-footer">
-	                <div><small data-tooltip='100%'><b>3</b> scenarios passed</small></div>
+	                <div><small data-tooltip='100%'><b>1</b> scenarios passed</small></div>
 	                <div>
 	                    <small data-tooltip='0%'><b>0</b> scenarios failed, 
 	                    <b data-tooltip='0%'>0</b> others
@@ -344,7 +262,7 @@
 	                </div>
 	            </div>
 	            <div class="card-footer">
-	                <div><small data-tooltip='100%'><b>15</b> steps passed</small></div>
+	                <div><small data-tooltip='100%'><b>6</b> steps passed</small></div>
 	                <div>
 	                    <small data-tooltip='0%'><b>0</b> steps failed, 
 	                    <b data-tooltip='0%'>0</b> others
@@ -380,7 +298,7 @@
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Scenarios</h6>
-							<h2 class="font-size-28 font-weight-light">3</h2>
+							<h2 class="font-size-28 font-weight-light">1</h2>
 							<span class="text-semibold text-success font-size-15">
 							<i class="ti-arrow-up font-size-11"></i> 
 								<span>100%</span>
@@ -399,7 +317,7 @@
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Start</h6>
-							<h6 class="font-weight-light">26-12-2024 23:27:54</h6>
+							<h6 class="font-weight-light">29-12-2024 22:31:36</h6>
 							<span class="text-semibold text-success font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -415,7 +333,7 @@
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Duration</h6>
-							<h6 class="font-weight-light">00:02:04.9721039</h6>
+							<h6 class="font-weight-light">00:00:25.4882026</h6>
 							<span class="text-semibold text-danger font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -470,8 +388,8 @@
 		warningParent: 0,
 		skipParent: 0,
 		exceptionsParent: 0,
-		childCount: 3,
-		passChild: 3,
+		childCount: 1,
+		passChild: 1,
 		failChild: 0,
 		fatalChild: 0,
 		errorChild: 0,
@@ -480,8 +398,8 @@
 		infoChild: 0,
 		debugChild: 0,
 		exceptionsChild: 0,
-		grandChildCount: 15,
-		passGrandChild: 15,
+		grandChildCount: 6,
+		passGrandChild: 6,
 		failGrandChild: 0,
 		fatalGrandChild: 0,
 		errorGrandChild: 0,
