--- a/TestResults/index.html
+++ b/TestResults/index.html
@@ -49,7 +49,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">02-01-2025 15:17:00</span>
+                    <span class="badge badge-primary">03-01-2025 15:30:31</span>
                 </a>
             </li>
         </ul>
@@ -118,9 +118,187 @@
 						</div>
 						<div class="open-test">
 							<div class="test-detail"> 
+								<p class="name">OrangeHRMDashboard left nav validation</p> 
+								<p class="duration text-sm">0h:0m:0s+000ms</p> 
+								<span class="datetime">15:30:31 PM</span>
+							</div>
+						</div>
+						<div class="test-contents d-none">
+							<div class="detail-head">
+								<div class="p-v-10 d-inline-block">	
+									<div class="info">
+										<h5 class="test-status text-pass">OrangeHRMDashboard left nav validation</h5>
+										<span class='badge badge-success'>03-01-2025 15:30:31</span>
+										<span class='badge badge-danger'>03-01-2025 15:30:31</span>
+										<span class='badge badge-default'>0h:0m:0s+000ms</span>
+									</div>
+																	</div>
+							</div>
+
+						</div>
+					</li>
+					<li class="test-item" status="pass" author="" device="" tag="" test-id="2"> 
+						<div class="status-avatar pass-bg">
+							<i class="fa fa-check text-white"></i>
+						</div>
+						<div class="open-test">
+							<div class="test-detail"> 
+								<p class="name">OrangeHRMDashboard using data table</p> 
+								<p class="duration text-sm">0h:0m:26s+633ms</p> 
+								<span class="datetime">15:30:31 PM</span>
+							</div>
+						</div>
+						<div class="test-contents d-none">
+							<div class="detail-head">
+								<div class="p-v-10 d-inline-block">	
+									<div class="info">
+										<h5 class="test-status text-pass">OrangeHRMDashboard using data table</h5>
+										<span class='badge badge-success'>03-01-2025 15:30:31</span>
+										<span class='badge badge-danger'>03-01-2025 15:30:58</span>
+										<span class='badge badge-default'>0h:0m:26s+633ms</span>
+									</div>
+																	</div>
+							</div>
+
+<div class="accordion mt-4">
+	<div class="card">
+		<div class="card-header" role="tab">
+			<div class="card-title pl-3">
+				<div class="node">Scenario: Verify Admin page</div>
+				<div class="status-avatar float-left pass-bg">
+					<i class="fa fa-check text-white"></i>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="card">
+		<div class="card-header" role="tab">
+			<div class="card-title pl-3">
+				<div class="node">Scenario: Verify Admin page</div>
+				<div class="status-avatar float-left pass-bg">
+					<i class="fa fa-check text-white"></i>
+				</div>
+			</div>
+		</div>
+				<div class="collapse">
+                    <div class="card-body">
+                                                    <div class="d-flex align-items-center justify-content-start given" title="">
+                                <span class="alert-icon pass-bg">
+                                    <i class="fa fa-check text-white"></i>
+                                </span>
+                                <span>Given User is on login page</span>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-start when" title="">
+                                <span class="alert-icon pass-bg">
+                                    <i class="fa fa-check text-white"></i>
+                                </span>
+                                <span>When User enters "Admin" in the "Username" text box</span>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-start when" title="">
+                                <span class="alert-icon pass-bg">
+                                    <i class="fa fa-check text-white"></i>
+                                </span>
+                                <span>When User enters "admin123" in the "Password" text box</span>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-start given" title="">
+                                <span class="alert-icon pass-bg">
+                                    <i class="fa fa-check text-white"></i>
+                                </span>
+                                <span>Given User is on login page</span>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-start when" title="">
+                                <span class="alert-icon pass-bg">
+                                    <i class="fa fa-check text-white"></i>
+                                </span>
+                                <span>When User enters "Admin" in the "Username" text box</span>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-start when" title="">
+                                <span class="alert-icon pass-bg">
+                                    <i class="fa fa-check text-white"></i>
+                                </span>
+                                <span>When User enters "admin123" in the "Password" text box</span>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-start when" title="">
+                                <span class="alert-icon pass-bg">
+                                    <i class="fa fa-check text-white"></i>
+                                </span>
+                                <span>When User clicks on the "Login" button</span>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-start then" title="">
+                                <span class="alert-icon pass-bg">
+                                    <i class="fa fa-check text-white"></i>
+                                </span>
+                                <span>Then User is navigated to "Dashboard" page</span>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-start when" title="">
+                                <span class="alert-icon pass-bg">
+                                    <i class="fa fa-check text-white"></i>
+                                </span>
+                                <span>When User waits for the "LeftNavDashboard" element to load</span>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-start then" title="">
+                                <span class="alert-icon pass-bg">
+                                    <i class="fa fa-check text-white"></i>
+                                </span>
+                                <span>Then User sees "LeftNavDashboard" tab highlighted</span>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-start when" title="">
+                                <span class="alert-icon pass-bg">
+                                    <i class="fa fa-check text-white"></i>
+                                </span>
+                                <span>When User clicks on the "Login" button</span>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-start then" title="">
+                                <span class="alert-icon pass-bg">
+                                    <i class="fa fa-check text-white"></i>
+                                </span>
+                                <span>Then User is navigated to "Dashboard" page</span>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-start then" title="">
+                                <span class="alert-icon pass-bg">
+                                    <i class="fa fa-check text-white"></i>
+                                </span>
+                                <span>Then User sees "LeftNavDashboard" tab highlighted</span>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-start when" title="">
+                                <span class="alert-icon pass-bg">
+                                    <i class="fa fa-check text-white"></i>
+                                </span>
+                                <span>When User clicks on the "LeftNavAdmin" button</span>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-start then" title="">
+                                <span class="alert-icon pass-bg">
+                                    <i class="fa fa-check text-white"></i>
+                                </span>
+                                <span>Then User is navigated to "Admin" page</span>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-start when" title="">
+                                <span class="alert-icon pass-bg">
+                                    <i class="fa fa-check text-white"></i>
+                                </span>
+                                <span>When User waits for the "Admin" element to load</span>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-start then" title="">
+                                <span class="alert-icon pass-bg">
+                                    <i class="fa fa-check text-white"></i>
+                                </span>
+                                <span>Then User selects city and country information</span>
+                            </div>
+                    </div>
+				</div>
+	</div>
+</div>
+						</div>
+					</li>
+					<li class="test-item" status="pass" author="" device="" tag="" test-id="18"> 
+						<div class="status-avatar pass-bg">
+							<i class="fa fa-check text-white"></i>
+						</div>
+						<div class="open-test">
+							<div class="test-detail"> 
 								<p class="name">OrangeHRMLogin Login functionality</p> 
-								<p class="duration text-sm">0h:1m:12s+170ms</p> 
-								<span class="datetime">15:17:00 PM</span>
+								<p class="duration text-sm">0h:0m:57s+007ms</p> 
+								<span class="datetime">15:30:53 PM</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
@@ -128,9 +306,9 @@
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
 										<h5 class="test-status text-pass">OrangeHRMLogin Login functionality</h5>
-										<span class='badge badge-success'>02-01-2025 15:17:00</span>
-										<span class='badge badge-danger'>02-01-2025 15:18:13</span>
-										<span class='badge badge-default'>0h:1m:12s+170ms</span>
+										<span class='badge badge-success'>03-01-2025 15:30:53</span>
+										<span class='badge badge-danger'>03-01-2025 15:31:50</span>
+										<span class='badge badge-default'>0h:0m:57s+007ms</span>
 									</div>
 																	</div>
 							</div>
@@ -303,7 +481,7 @@
 	            </div>
 	            <div class="card-footer">
 	                <div><small data-tooltip='100%'>
-	                    <b>1</b> features passed
+	                    <b>3</b> features passed
                     </small></div>
 	                <div>
 	                    <small data-tooltip='0%'><b>0</b> features failed, 
@@ -324,7 +502,7 @@
 	                </div>
 	            </div>
 	            <div class="card-footer">
-	                <div><small data-tooltip='100%'><b>3</b> scenarios passed</small></div>
+	                <div><small data-tooltip='100%'><b>5</b> scenarios passed</small></div>
 	                <div>
 	                    <small data-tooltip='0%'><b>0</b> scenarios failed, 
 	                    <b data-tooltip='0%'>0</b> others
@@ -344,7 +522,7 @@
 	                </div>
 	            </div>
 	            <div class="card-footer">
-	                <div><small data-tooltip='100%'><b>15</b> steps passed</small></div>
+	                <div><small data-tooltip='100%'><b>33</b> steps passed</small></div>
 	                <div>
 	                    <small data-tooltip='0%'><b>0</b> steps failed, 
 	                    <b data-tooltip='0%'>0</b> others
@@ -361,25 +539,6 @@
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Features</h6>
-							<h2 class="font-size-28 font-weight-light">1</h2>
-							<span class="text-semibold text-success font-size-15">
-							<i class="ti-arrow-up font-size-11"></i> 
-								<span>100%</span>
-							</span>
-						</div>
-						<div class="align-self-end">
-							<i class="fa fa-align-left font-size-70 opacity-01"></i>
-						</div>
-					</div>
-	            </div>
-			</div>
-		</div>
-		<div class="col-md-3">
-			<div class="card">
-				<div class="card-body box-height-150">
-	                <div class="media justify-content-between">
-						<div>
-							<h6 class="card-title">Scenarios</h6>
 							<h2 class="font-size-28 font-weight-light">3</h2>
 							<span class="text-semibold text-success font-size-15">
 							<i class="ti-arrow-up font-size-11"></i> 
@@ -398,8 +557,27 @@
 				<div class="card-body box-height-150">
 	                <div class="media justify-content-between">
 						<div>
+							<h6 class="card-title">Scenarios</h6>
+							<h2 class="font-size-28 font-weight-light">5</h2>
+							<span class="text-semibold text-success font-size-15">
+							<i class="ti-arrow-up font-size-11"></i> 
+								<span>100%</span>
+							</span>
+						</div>
+						<div class="align-self-end">
+							<i class="fa fa-align-left font-size-70 opacity-01"></i>
+						</div>
+					</div>
+	            </div>
+			</div>
+		</div>
+		<div class="col-md-3">
+			<div class="card">
+				<div class="card-body box-height-150">
+	                <div class="media justify-content-between">
+						<div>
 							<h6 class="card-title">Start</h6>
-							<h6 class="font-weight-light">02-01-2025 15:17:00</h6>
+							<h6 class="font-weight-light">03-01-2025 15:30:31</h6>
 							<span class="text-semibold text-success font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -415,7 +593,7 @@
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Duration</h6>
-							<h6 class="font-weight-light">00:01:12.9216466</h6>
+							<h6 class="font-weight-light">00:01:19.8097749</h6>
 							<span class="text-semibold text-danger font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -462,16 +640,16 @@
 </div>
 <script>
 	var statusGroup = {
-    parentCount: 1,
-		passParent: 1,
+    parentCount: 3,
+		passParent: 3,
 		failParent: 0,
 		fatalParent: 0,
 		errorParent: 0,
 		warningParent: 0,
 		skipParent: 0,
 		exceptionsParent: 0,
-		childCount: 3,
-		passChild: 3,
+		childCount: 5,
+		passChild: 5,
 		failChild: 0,
 		fatalChild: 0,
 		errorChild: 0,
@@ -480,8 +658,8 @@
 		infoChild: 0,
 		debugChild: 0,
 		exceptionsChild: 0,
-		grandChildCount: 15,
-		passGrandChild: 15,
+		grandChildCount: 33,
+		passGrandChild: 33,
 		failGrandChild: 0,
 		fatalGrandChild: 0,
 		errorGrandChild: 0,
